--- a/src/feihe/Index.cshtml
+++ b/src/feihe/Index.cshtml
@@ -8,7 +8,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <title>飞鹤</title>
+    <title>为新生鹤彩</title>
     <link href="~/Scripts/mp/FeiHe/css/index.css" rel="stylesheet" />
     <link href="~/Scripts/mp/FeiHe/css/slidePage.min.css" rel="stylesheet" />
     <link href="~/Scripts/mp/FeiHe/css/swiper.min.css" rel="stylesheet" />
@@ -29,8 +29,12 @@
 </head>
 <body>
     <div class="container slide-container" id="slide-container">
+      <div class="glbYun1">
+        <img src="~/Scripts/mp/FeiHe/images/brief-cloud1.png" alt="">
+      </div>
       <!-- 加载页 -->
-      <div class="page loading">
+      <div class="slide-page page loading">
+        <div class="loadingBg"></div>
         <div class="loadingTitle">
           <div class="loading-circle">
             <img src="~/Scripts/mp/FeiHe/images/loading-circle.png" />
@@ -38,15 +42,24 @@
           </div>
           <img src="~/Scripts/mp/FeiHe/images/loading1.png" class="loading1" />
         </div>  
+        <!-- <div class="brief-cloud12">
+            <img src="~/Scripts/mp/FeiHe/images/brief-cloud11.png" />
+        </div> -->
+        <div class="yun1">
+          <img src="~/Scripts/mp/FeiHe/images/page1yun2.png" alt="">
+        </div>
+        <div class="yun2">
+          <img src="~/Scripts/mp/FeiHe/images/page1yun.png" alt="">
+        </div>
       </div>
       <!-- 简介页 -->
       <div class="page brief slide-page">
          <div class="brief-dog">
            <img src="~/Scripts/mp/FeiHe/images/brief-dog.png" />
          </div>
-         <div class="brief-cloud1">
-          <img src="~/Scripts/mp/FeiHe/images/brief-cloud1.png" />
-        </div>
+         <!-- <div class="brief-cloud1">
+          <img src="~/Scripts/mp/FeiHe/images/brief-cloud12.png" />
+        </div> -->
         <div class="brief-cloud2">
           <img src="~/Scripts/mp/FeiHe/images/brief-cloud2.png" />
         </div>
@@ -56,9 +69,9 @@
         <div class="brief-word1">
           <img src="~/Scripts/mp/FeiHe/images/brief-word1.png" />
         </div>
-        <div class="brief-cloud3">
+        <!-- <div class="brief-cloud3">
           <img src="~/Scripts/mp/FeiHe/images/brief-cloud3.png" />
-        </div>
+        </div> -->
         <div class="brief-card next-btn">
           <img src="~/Scripts/mp/FeiHe/images/brief-card.png" />
         </div>
@@ -68,31 +81,33 @@
         <div class="message-tree">
           <img src="~/Scripts/mp/FeiHe/images/message-tree.png" />
         </div>
-        <div class="message-crane">
+        <!-- <div class="message-crane">
           <img src="~/Scripts/mp/FeiHe/images/message-crane.png" />
-        </div>
+        </div> -->
         <div class="message-lantern">
           <img src="~/Scripts/mp/FeiHe/images/message-lantern.png" />
         </div>
-        <div class="message-word1">
-          <img src="~/Scripts/mp/FeiHe/images/message-word1.png" />
-        </div>
-        <div class="message-box">
-          <img src="~/Scripts/mp/FeiHe/images/message-box.png" />
-          <div class="date">
-            <input type="text" class="year" />
-            <span>年</span>
-            <input type="text" class="month" />
-            <span>月</span>
+        <div class="infoBoxZ">
+          <div class="message-word1">
+            <img src="~/Scripts/mp/FeiHe/images/message-word1.png" />
           </div>
-        </div>
-        <div class="message-word2">
-          <img src="~/Scripts/mp/FeiHe/images/message-word2.png" />
-        </div>
-        <div class="message-box2">
-          <img src="~/Scripts/mp/FeiHe/images/message-box.png" />
-          <div class="addr">
-            <input type="text" class="addr-s" />
+          <div class="message-box">
+            <img src="~/Scripts/mp/FeiHe/images/message-box.png" />
+            <div class="date">
+              <input type="text" class="year" />
+              <span>年</span>
+              <input type="text" class="month" />
+              <span>月</span>
+            </div>
+          </div>
+          <div class="message-word2">
+            <img src="~/Scripts/mp/FeiHe/images/message-word2.png" />
+          </div>
+          <div class="message-box2">
+            <img src="~/Scripts/mp/FeiHe/images/message-box.png" />
+            <div class="addr">
+              <input type="text" class="addr-s" />
+            </div>
           </div>
         </div>
         <div class="message-cloud1">
@@ -137,73 +152,75 @@
         <div class="arrow-right swiper-arrow-next">
           <img src="~/Scripts/mp/FeiHe/images/arrow-right.png" />
         </div>
-        <div class="uploadBox">
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="upload-area swiper-slide">
-                    <div class="upload-box upload-box1">
-                      <img src="~/Scripts/mp/FeiHe/images/templet-upload1.png" class="templetBg" />
-                    </div>
-                    <img src="~/Scripts/mp/FeiHe/images/templet1.png" class="templetImg" />
-                    <div class="word-area word-area1">
-                      <div class="p1"><span class="t-year"></span>年<span class="t-month"></span>月童星<span class="t-name"></span></div>
-                      <div class="p2">登上头条，为白衣天使送上祝福！</div>
-                      <div class="p3">他表示：</div>
-                      <div class="p4">感谢<span class="t-addr"></span>的白衣天使在<span><span class="t-year"></span>年<span class="t-month"></span>月</span>接生如此<span>才貌双全</span>的我。</div>
-                      <div class="qrcodes">
-                        <p>长按送祝福</p>
-                        <img src="~/Scripts/mp/FeiHe/images/qrcode.png" />
+        <div class="slideWrapper">
+          <div class="uploadBox">
+              <div class="swiper-container">
+                  <div class="swiper-wrapper">
+                    <div class="upload-area swiper-slide">
+                      <div class="upload-box upload-box1">
+                        <img src="~/Scripts/mp/FeiHe/images/templet-upload1.png" class="templetBg" />
                       </div>
+                      <img src="~/Scripts/mp/FeiHe/images/templet1.png" class="templetImg" />
+                      <div class="word-area word-area1">
+                        <div class="p1"><span class="t-year"></span>年<span class="t-month"></span>月童星<span class="t-name"></span></div>
+                        <div class="p2">登上头条，为白衣天使送上祝福！</div>
+                        <div class="p3">他表示：</div>
+                        <div class="p4">感谢<span class="t-addr"></span>的白衣天使在<span><span class="t-year"></span>年<span class="t-month"></span>月</span>接生如此<span>才貌双全</span>的我。</div>
+                        <div class="qrcodes">
+                          <p>长按送祝福</p>
+                          <img src="~/Scripts/mp/FeiHe/images/qrcode.png" />
+                        </div>
+                      </div>
+                      <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
                     </div>
-                    <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
+                    <div class="upload-area swiper-slide">
+                      <div class="upload-box upload-box2">
+                        <img src="~/Scripts/mp/FeiHe/images/templet-upload2.png" class="templetBg" />
+                      </div>
+                      <img src="~/Scripts/mp/FeiHe/images/templet2.png" class="templetImg" />
+                      <div class="word-area word-area2">
+                        <div class="vertical">
+                          <div class="p1 word">感谢</div>
+                          <div class="p2 word"><span class="t-addr"></span></div>
+                          <div class="p3 word">的白衣天使</div>
+                          <div class="p4 word">感谢你们在<span><span class="t-year"></span>年<span class="t-month"></span>月</span></div>
+                          <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
+                          <div class="p6 word">祝你们新春快乐！</div>
+                        </div>
+                        <div class="p7"><span class="t-name"></span></div>
+                        <div class="qrcodes">
+                          <img src="~/Scripts/mp/FeiHe/images/qrcode.png" />
+                          <p>长按送祝福</p>
+                        </div>
+                      </div>
+                      <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
+                    </div>
+                    <div class="upload-area swiper-slide">
+                      <div class="upload-box upload-box3">
+                        <img src="~/Scripts/mp/FeiHe/images/templet-upload3.png" class="templetBg" />
+                      </div>
+                      <img src="~/Scripts/mp/FeiHe/images/templet3.png" class="templetImg" />
+                      <div class="word-area word-area3">
+                        <div class="vertical">
+                          <div class="p1 word">感谢</div>
+                          <div class="p2 word"><span class="t-addr"></span></div>
+                          <div class="p3 word">的白衣天使</div>
+                          <div class="p4 word">感谢你们在<span><span class="t-year"></span>年<span class="t-month"></span>月</span></div>
+                          <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
+                          <div class="p6 word">祝你们新春快乐！</div>
+                        </div>
+                        <div class="p7"><span class="t-name"></span></div>
+                        <div class="qrcodes">
+                          <img src="~/Scripts/mp/FeiHe/images/qrcode.png" />
+                          <p>长按送祝福</p>
+                        </div>
+                      </div>
+                      <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
+                    </div>
                   </div>
-                  <div class="upload-area swiper-slide">
-                    <div class="upload-box upload-box2">
-                      <img src="~/Scripts/mp/FeiHe/images/templet-upload2.png" class="templetBg" />
-                    </div>
-                    <img src="~/Scripts/mp/FeiHe/images/templet2.png" class="templetImg" />
-                    <div class="word-area word-area2">
-                      <div class="vertical">
-                        <div class="p1 word">感谢</div>
-                        <div class="p2 word"><span class="t-addr"></span></div>
-                        <div class="p3 word">的白衣天使</div>
-                        <div class="p4 word">感谢你们在<span><span class="t-year"></span>年<span class="t-month"></span>月</span></div>
-                        <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
-                        <div class="p6 word">祝你们新春快乐！</div>
-                      </div>
-                      <div class="p7"><span class="t-name"></span></div>
-                      <div class="qrcodes">
-                        <img src="~/Scripts/mp/FeiHe/images/qrcode.png" />
-                        <p>长按送祝福</p>
-                      </div>
-                    </div>
-                    <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
-                  </div>
-                  <div class="upload-area swiper-slide">
-                    <div class="upload-box upload-box3">
-                      <img src="~/Scripts/mp/FeiHe/images/templet-upload3.png" class="templetBg" />
-                    </div>
-                    <img src="~/Scripts/mp/FeiHe/images/templet3.png" class="templetImg" />
-                    <div class="word-area word-area3">
-                      <div class="vertical">
-                        <div class="p1 word">感谢</div>
-                        <div class="p2 word"><span class="t-addr"></span></div>
-                        <div class="p3 word">的白衣天使</div>
-                        <div class="p4 word">感谢你们在<span><span class="t-year"></span>年<span class="t-month"></span>月</span></div>
-                        <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
-                        <div class="p6 word">祝你们新春快乐！</div>
-                      </div>
-                      <div class="p7"><span class="t-name"></span></div>
-                      <div class="qrcodes">
-                        <img src="~/Scripts/mp/FeiHe/images/qrcode.png" />
-                        <p>长按送祝福</p>
-                      </div>
-                    </div>
-                    <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
-                  </div>
-                </div>
-            </div>
-            <input type="file" class="fileUpload" id="upload" accept="image/*">
+              </div>
+              <input type="file" class="fileUpload" id="upload" accept="image/*">
+          </div>
         </div>
         <!-- 生成二维码 -->
         <div class="qrcode"></div>
@@ -215,6 +232,12 @@
         </div>
         <div class="result">
           <img src="~/Scripts/mp/FeiHe/images/result1.png" id="resultImg" />
+        </div>
+        <div class="shareResult" id="shareResult">
+          <img src="~/Scripts/mp/FeiHe/images/result1.png" id="shareImg" />
+        </div>
+        <div class="shareLogo">
+          <img src="" id="shareLogo"  />
         </div>
         <div class="share-cloud1">
           <img src="~/Scripts/mp/FeiHe/images/share-cloud1.png" />
@@ -260,28 +283,34 @@
         </div>
       </div>
     </div>
-
+    <input name="UploadPhoto" type="hidden" />  @*上传的照片*@
+    <input name="TempLateID" type="hidden" />  @*选择的模版号*@
+    <input name="UserPhoto" type="hidden" />  @*合成的照片*@
+    <input name="SharePhoto" type="hidden" />  @*200*200的照片*@
+    
+    <input name="Type" type="hidden" value="@ViewBag.type" /> @*真实用户*@
     <script type="text/javascript">
         var userinfo = {
-            nickname:"@Session["nickname"].ToString()",
-            headimg: "@Session["headimg"].ToString()",
+            nickname:"@ViewBag.nickname",
+            headimg: "@ViewBag.headimg",
         };
 </script>
     <script src="~/Scripts/mp/FeiHe/js/jquery-1.11.0.min.js"></script>
     <script src="~/Scripts/mp/FeiHe/js/preloadjs-0.6.2.min.js"></script>
     <script src="~/Scripts/mp/FeiHe/js/soundjs-0.6.2.min.js"></script>
     <script src="~/Scripts/mp/FeiHe/js/qrcode.min.js"></script>
+    <script src="~/Scripts/mp/FeiHe/js/layer/layer.js"></script>
+    <script src="~/Scripts/mp/FeiHe/js/exif.js"></script>
     <script src="~/Scripts/mp/FeiHe/js/slidePage.min.js"></script>
     <script src="~/Scripts/mp/FeiHe/js/swiper.min.js"></script>
     <script src="~/Scripts/mp/FeiHe/js/AlloyFinger.js"></script>
     <script src="~/Scripts/mp/FeiHe/js/transformjs.js"></script>
     <script src="~/Scripts/mp/FeiHe/js/html2canvas.js"></script>
+    <script src="~/Scripts/mp/FeiHe/feihe.js?v=18"></script>
     <script src="~/Scripts/mp/FeiHe/js/index.js"></script>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-    <script src="~/Themes/js/plugins/layermobile/layer.js"></script>
-    <script src="~/Scripts/mp/listerine/js/ajaxFileUpload.js"></script>
+    <script src="~/Themes/js/plugins/layermobile/layer.js"></script> 
     <script src="~/Themes/js/WeiXin.js"></script>
-    <script src="~/Scripts/mp/FeiHe/feihe.js?v=18"></script>
     <div style="display:none">
         <script src="https://s19.cnzz.com/z_stat.php?id=1262885449&web_id=1262885449" language="JavaScript"></script>
     </div>
