--- a/src/feihe/css/index.css
+++ b/src/feihe/css/index.css
@@ -322,7 +322,7 @@ template { display: none; }
   44.4% { -webkit-transform: skewX(-3.125deg) skewY(-3.125deg); transform: skewX(-3.125deg) skewY(-3.125deg); }
   55.5% { -webkit-transform: skewX(1.5625deg) skewY(1.5625deg); transform: skewX(1.5625deg) skewY(1.5625deg); }
   66.6% { -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg); transform: skewX(-0.78125deg) skewY(-0.78125deg); }
-  77.7% { -webkit-transform: skewX(0.39062deg) skewY(0.39062deg); transform: skewX(0.39062deg) skewY(0.39062deg); }
+  77.7% { -webkit-transform: skewX(0.39063deg) skewY(0.39063deg); transform: skewX(0.39063deg) skewY(0.39063deg); }
   88.8% { -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg); transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
 
 @keyframes jello { from, 11.1%, to { -webkit-transform: none; transform: none; }
@@ -331,7 +331,7 @@ template { display: none; }
   44.4% { -webkit-transform: skewX(-3.125deg) skewY(-3.125deg); transform: skewX(-3.125deg) skewY(-3.125deg); }
   55.5% { -webkit-transform: skewX(1.5625deg) skewY(1.5625deg); transform: skewX(1.5625deg) skewY(1.5625deg); }
   66.6% { -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg); transform: skewX(-0.78125deg) skewY(-0.78125deg); }
-  77.7% { -webkit-transform: skewX(0.39062deg) skewY(0.39062deg); transform: skewX(0.39062deg) skewY(0.39062deg); }
+  77.7% { -webkit-transform: skewX(0.39063deg) skewY(0.39063deg); transform: skewX(0.39063deg) skewY(0.39063deg); }
   88.8% { -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg); transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
 
 .jello { -webkit-animation-name: jello; animation-name: jello; -webkit-transform-origin: center; -ms-transform-origin: center; transform-origin: center; }
@@ -1588,11 +1588,11 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .message .message-cloud1 { position: absolute; top: 36%; left: 0; width: 6.92rem; }
 
-.message .message-bird { position: absolute; bottom: 0; left: 0; width: 96.6%; z-index: 3; }
+.message .message-bird { position: absolute; bottom: 0; left: 0; width: 96.6%; }
 
 .message .message-cloud2 { position: absolute; top: 85.7%; right: 0; width: 2.8rem; }
 
-.message .message-upload { position: absolute; top: 88.3%; left: 50%; width: 7.24rem; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); }
+.message .message-upload { position: absolute; top: 88.3%; left: 50%; z-index: 2; width: 7.24rem; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); }
 
 .templet { z-index: 11; background-image: url(../images/briefBg.png); }
 
@@ -1606,15 +1606,15 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .templet .templet-pine { position: absolute; bottom: 0; right: 0; width: 7.6rem; }
 
-.templet .templet-card { position: absolute; bottom: 2.9%; left: 21.6%; width: 7.72rem; }
+.templet .templet-card { position: absolute; bottom: 2.9%; left: 21.6%; z-index: 2; width: 7.72rem; }
 
 .templet .templet-lantern3 { position: absolute; top: 49.9%; left: 75.7%; width: 2rem; z-index: 2; }
 
 .templet .templet-cloud { position: absolute; top: 28.6%; right: 0; width: 5.6rem; }
 
-.templet .arrow-left { position: absolute; top: 46.6%; left: 3.4%; width: .88rem; }
+.templet .arrow-left { position: absolute; top: 46.6%; left: 3.4%; z-index: 2; width: .88rem; }
 
-.templet .arrow-right { position: absolute; top: 46.6%; right: 3.4%; width: .88rem; }
+.templet .arrow-right { position: absolute; top: 46.6%; right: 3.4%; z-index: 2; width: .88rem; }
 
 .templet .slideWrapper { position: absolute; left: 0; top: 0; z-index: 1; width: 100%; height: 100%; padding-bottom: 1.6rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; }
 
@@ -1697,6 +1697,12 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 .share .result { position: absolute; top: 9.2%; left: 50%; z-index: 1; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); width: 10.8rem; }
 
 .share .result img { pointer-events: auto; }
+
+.share .shareResult { position: absolute; top: 9.2%; left: 50%; z-index: -1; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); width: 100px; height: 100px; overflow: hidden; }
+
+.share .shareResult img { position: absolute; top: 0; left: 0; width: 10.88rem; }
+
+.share .shareLogo { display: none; }
 
 .share .share-cloud1 { position: absolute; top: 13.8%; left: 0; width: 3.28rem; }
 
