--- a/src/feihe/css/index.css
+++ b/src/feihe/css/index.css
@@ -2535,6 +2535,8 @@ html, body { width: 100%; height: 100%; background-color: #db3f3c; }
 
 .glbYun1.active { top: -20px; }
 
+.pageAnimate { display: none; }
+
 .xianhe2 { display: none; position: absolute; left: 0; top: -8.4rem; width: 100%; z-index: 40; }
 
 .brief-cloud3 { position: absolute; bottom: -14rem; right: 0; width: 86.5%; }
