--- a/src/feihe/css/index.css
+++ b/src/feihe/css/index.css
@@ -2531,10 +2531,6 @@ html, body { width: 100%; height: 100%; background-color: #db3f3c; }
 
 .container { position: relative; width: 100%; height: 100%; }
 
-.glbYun1 { width: 10.48rem; position: absolute; right: -6.2rem; top: 94%; z-index: 40; -webkit-transition: top 3s; -o-transition: top 3s; transition: top 3s; }
-
-.glbYun1.active { top: -20px; }
-
 .pageAnimate { display: none; }
 
 .xianhe2 { display: none; position: absolute; left: 0; top: -8.4rem; width: 100%; z-index: 40; }
@@ -2568,6 +2564,12 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 .loading .yun2 { width: 9.28rem; position: absolute; right: -5.2rem; top: 6.4rem; }
 
 .guodu { z-index: 11; background-image: url(../images/bgMain.jpg); -webkit-background-size: 100% 100%; background-size: 100%; background-position: left top; background-repeat: no-repeat; background-color: #e2413f; }
+
+.guodu .yun1 { width: 19.24rem; position: absolute; left: -12rem; top: 9.6rem; }
+
+.guodu .yun2 { width: 15.48rem; position: absolute; right: -9.28rem; bottom: 2.8rem; }
+
+.guodu .xianhe { width: 14.56rem; position: absolute; right: -5.2rem; top: 1.52rem; }
 
 .brief { z-index: 11; background-image: url(../images/bgMain.jpg); -webkit-background-size: 100% 100%; background-size: 100%; background-position: left top; background-repeat: no-repeat; background-color: #e2413f; }
 
