--- a/src/feihe/css/index.css
+++ b/src/feihe/css/index.css
@@ -2533,11 +2533,9 @@ html, body { width: 100%; height: 100%; background-color: #db3f3c; }
 
 .pageAnimate { display: none; }
 
-.xianhe2 { display: none; position: absolute; left: 0; top: -8.4rem; width: 100%; z-index: 40; }
-
 .brief-cloud3 { position: absolute; bottom: -14rem; right: 0; width: 86.5%; }
 
-.page { position: absolute; left: 0; top: 0; z-index: 10; width: 100%; height: 100%; }
+.page { position: absolute; left: 0; top: 0; z-index: 10; width: 100%; height: 100%; overflow: hidden; }
 
 img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
@@ -2588,6 +2586,20 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 .brief .brief-cloud3 { position: absolute; bottom: -14rem; right: 0; width: 86.5%; }
 
 .brief .brief-card { position: absolute; bottom: 0; right: 24.4%; width: 51.2%; }
+
+.guodu2 { z-index: 11; background-image: url(../images/briefBg.png); }
+
+.guodu2 .yun1 { width: 13rem; position: absolute; right: -0.2rem; top: -8.4rem; }
+
+.guodu2 .gou1 { width: 12.16rem; position: absolute; right: -4.4rem; top: 1.6rem; z-index: 3; }
+
+.guodu2 .brief-cloud1 { width: 10.48rem; position: absolute; left: -5.6rem; top: 7.6rem; }
+
+.guodu2 .message-lantern { width: 3.6rem; position: absolute; left: 6rem; top: 11.2rem; }
+
+.guodu2 .message-cloud2 { width: 5.6rem; position: absolute; right: 0; bottom: 4.4rem; }
+
+.guodu2 .xianhe2 { width: 100%; position: absolute; left: 0; bottom: -8.8rem; }
 
 .message { z-index: 11; background-image: url(../images/briefBg.png); }
 
