--- a/src/feihe/scss/index.scss
+++ b/src/feihe/scss/index.scss
@@ -42,6 +42,7 @@ img{
 	background-size: 100%;
 	background-position: left top;
 	background-color: #e2413f;
+	background-repeat: no-repeat;
 	.xingxing1 {
 		width: 2.04rem /* 51/25 */;
 		height: 2.16rem /* 54/25 */;
@@ -107,6 +108,12 @@ img{
 		right: -5.2rem /* 130/25 */;
 		top: 6.4rem /* 160/25 */;
 	}
+	.xianhe3{
+		position: absolute;
+		right: -20%;
+		bottom: -22%;
+		width: 100%;
+	}
 }
 //过度页
 .guodu {
@@ -116,6 +123,12 @@ img{
 	background-position: left top;
 	background-repeat: no-repeat;
 	background-color: #e2413f;
+	.xianhe3{
+		position: absolute;
+		right: -20%;
+		top: -20%;
+		width: 100%;
+	}
 	.yun1 {
 		width: 19.24rem /* 481/25 */;
 		position: absolute;
@@ -131,8 +144,15 @@ img{
 	.xianhe {
 		width: 14.56rem /* 364/25 */;
 		position: absolute;
-		right: -5.2rem /* 130/25 */;
-		top: 1.52rem /* 38/25 */;
+		// right: -5.2rem /* 130/25 */;
+		// top: 1.52rem /* 38/25 */;
+		top: -10%;
+		right: 0;
+		transform: translate3d(21%,0,0);
+		opacity: 0;
+		&.active{
+			animation: xinhe 3s;
+		}
 	}
 }
 // 简介页
@@ -190,17 +210,31 @@ img{
 		bottom: 0;
 		right: 24.4%;
 		width: 51.2%;
+		z-index: 2;
+	}
+	.cloud1{
+		position: absolute;
+		bottom: -23%;
+		right: 0;
+		width: 100%;
+		z-index: 1;
 	}
 }
 .guodu2 {
 	z-index: 11;
 	background-image: url(../images/briefBg.png);
-	.yun1 {
-		width: 13rem;
-    position: absolute;
-    right: -0.2rem;
-    top: -8.4rem;
+	.cloud1{
+		position: absolute;
+		top: -51%;
+		right: 0;
+		width: 100%;
 	}
+	// .yun1 {
+	// 	width: 13rem;
+	// 	position: absolute;
+	// 	right: -0.2rem;
+	// 	top: -8.4rem;
+	// }
 	.gou1 {
 		width: 12.16rem /* 304/25 */;
 		position: absolute;
@@ -230,7 +264,7 @@ img{
 		width: 100%;
 		position: absolute;
 		left: 0;
-		bottom: -8.8rem /* 220/25 */;
+		bottom: -16%;
 	}
 }
 // 填写讯页
@@ -240,6 +274,12 @@ img{
 	img{
 		display: block;
 		width: 100%;
+	}
+	.xianhe2 {
+		width: 100%;
+		position: absolute;
+		left: 0;
+		top: -35%;
 	}
 	.message-tree{
 		position: absolute;
@@ -831,4 +871,16 @@ img{
 
 .slide-container .slide-page.transition {
 	transition: all 3s;
+}
+
+// 动画
+@keyframes xinhe{
+	from {
+		transform:translate3d(21%,0,0);
+		opacity: 0;
+	}
+	to {
+		transform:translate3d(-100%,0,0);
+		opacity: 1;
+	}
 }
