--- a/src/feihe/Index.cshtml
+++ b/src/feihe/Index.cshtml
@@ -29,12 +29,12 @@
 </head>
 <body>
     <div class="container slide-container" id="slide-container">
-      <div class="glbYun1">
-        <img src="~/Scripts/mp/FeiHe/images/brief-cloud1.png" alt="">
-      </div>
       <!-- 加载页 -->
       <div class="slide-page page loading">
         <div class="loadingBg"></div>
+        <div class="xingxing1 pageAnimate pulse animated infinite">
+          <img src="~/Scripts/mp/FeiHe/images/xingxing1.png" alt="">
+        </div>
         <div class="loadingTitle">
           <div class="loading-circle">
             <img src="~/Scripts/mp/FeiHe/images/loading-circle.png" />
@@ -51,9 +51,30 @@
         <div class="yun2">
           <img src="~/Scripts/mp/FeiHe/images/page1yun.png" alt="">
         </div>
+        <div class="xianhe3">
+            <img src="~/Scripts/mp/FeiHe/images/xianhe3.png" />
+        </div>
+      </div>
+      <!-- 过度页 -->
+      <div class="slide-page page guodu">
+        <div class="xianhe3">
+            <img src="~/Scripts/mp/FeiHe/images/xianhe3.png" />
+        </div>
+        <div class="yun1">
+          <img src="~/Scripts/mp/FeiHe/images/guoduYun1.png" alt="">
+        </div>
+        <div class="yun2">
+          <img src="~/Scripts/mp/FeiHe/images/guoduYun2.png" alt="">
+        </div>
+        <div class="xianhe">
+          <img src="~/Scripts/mp/FeiHe/images/xianhe1.png" alt="">
+        </div>
       </div>
       <!-- 简介页 -->
       <div class="page brief slide-page">
+          <div class="yun2 pageAnimate shake animated">
+            <img src="~/Scripts/mp/FeiHe/images/page1yun.png" alt="">
+          </div>
          <div class="brief-dog">
            <img src="~/Scripts/mp/FeiHe/images/brief-dog.png" />
          </div>
@@ -75,11 +96,41 @@
         <div class="brief-card next-btn">
           <img src="~/Scripts/mp/FeiHe/images/brief-card.png" />
         </div>
+        <div class="cloud1">
+          <img src="~/Scripts/mp/FeiHe/images/cloud1.png" />
+        </div>
+      </div>
+      <!-- 过度2 -->
+      <div class="page guodu2 slide-page">
+        <div class="cloud1">
+          <img src="~/Scripts/mp/FeiHe/images/cloud1.png" />
+        </div>
+        <!-- <div class="yun1">
+          <img src="~/Scripts/mp/FeiHe/images/brief-cloud3.png" alt="">
+        </div> -->
+        <div class="gou1">
+          <img src="~/Scripts/mp/FeiHe/images/gou.png" alt="">
+        </div>
+        <div class="brief-cloud1">
+          <img src="~/Scripts/mp/FeiHe/images/brief-cloud1.png" alt="">
+        </div>
+        <div class="message-lantern">
+          <img src="~/Scripts/mp/FeiHe/images/message-lantern.png" alt="">
+        </div>
+        <div class="message-cloud2">
+          <img src="~/Scripts/mp/FeiHe/images/message-cloud2.png" alt="">
+        </div>
+        <div class="xianhe2">
+          <img src="~/Scripts/mp/FeiHe/images/xianhe2.png" alt="">
+        </div>
       </div>
       <!-- 填写讯页 -->
       <div class="page message slide-page">
+        <div class="xianhe2">
+          <img src="~/Scripts/mp/FeiHe/images/xianhe2.png" alt="">
+        </div>
         <div class="message-tree">
-          <img src="~/Scripts/mp/FeiHe/images/message-tree.png" />
+          <!-- <img src="~/Scripts/mp/FeiHe/images/message-tree.png" /> -->
         </div>
         <!-- <div class="message-crane">
           <img src="~/Scripts/mp/FeiHe/images/message-crane.png" />
