--- a/src/feihe/scss/index.scss
+++ b/src/feihe/scss/index.scss
@@ -134,12 +134,18 @@ img{
 		position: absolute;
 		left: -12rem /* 300/25 */;
 		top: 9.6rem /* 240/25 */;
+		&.active{
+			animation: yun1 3s linear forwards;
+		}
 	}
 	.yun2 {
 		width: 15.48rem /* 387/25 */;
 		position: absolute;
 		right: -9.28rem /* 232/25 */;
 		bottom: 2.8rem /* 70/25 */;
+		&.active{
+			animation: yun1 2s linear forwards;
+		}
 	}
 	.xianhe {
 		width: 14.56rem /* 364/25 */;
@@ -247,6 +253,9 @@ img{
 		position: absolute;
 		left: -5.6rem /* 140/25 */;
 		top: 7.6rem /* 190/25 */;
+		&.active{
+			animation: yun1 3s linear forwards;
+		}
 	}
 	.message-lantern {
 		width: 3.6rem /* 90/25 */;
@@ -882,5 +891,13 @@ img{
 	to {
 		transform:translate3d(-100%,0,0);
 		opacity: 1;
+	}
+}
+@keyframes yun1{
+	from {
+		transform:translate3d(0,0,0);
+	}
+	to {
+		transform:translate3d(0,-100%,0);
 	}
 }
