--- a/src/feihe/scss/index.scss
+++ b/src/feihe/scss/index.scss
@@ -264,23 +264,29 @@ body {
     top: 0;
     .text1 {
       width: 15rem /* 375/25 */;
-      height: 6.28rem /* 157/25 */;
+    //   height: 6.28rem /* 157/25 */;
+      height: 6rem /* 150/25 */;
       background: url(../images/text1.png) no-repeat center;
-			background-size: 15rem /* 375/25 */ 6.28rem /* 157/25 */;
+			// background-size: 15rem /* 375/25 */ 6.28rem /* 157/25 */;
+			background-size: 15rem /* 375/25 */ 6rem /* 150/25 */;
 			visibility: hidden;
     }
     .text2 {
       width: 15rem /* 375/25 */;
-      height: 3.44rem /* 86/25 */;
+    //   height: 3.44rem /* 86/25 */;
+      height: 4.48rem /* 112/25 */;
       background: url(../images/text2.png) no-repeat center;
-			background-size:  15rem /* 375/25 */3.44rem /* 86/25 */;
+			// background-size:  15rem /* 375/25 */3.44rem /* 86/25 */;
+			background-size:  15rem /* 375/25 */4.48rem /* 112/25 */;
 			visibility: hidden;
     }
     .text3 {
       width: 100%;
-      height: 4.64rem /* 116/25 */;
+    //   height: 4.64rem /* 116/25 */;
+      height: 4.12rem /* 103/25 */;
       background: url(../images/text3.png) no-repeat center;
-			background-size: 100% 4.64rem /* 116/25 */;
+			// background-size: 100% 4.64rem /* 116/25 */;
+			background-size: 100% 4.12rem /* 103/25 */;
 			visibility: hidden;
     }
   }
