--- a/src/yueche/scss/index.scss
+++ b/src/yueche/scss/index.scss
@@ -375,3 +375,75 @@ html {
 		}
 	}
 }
+// 填写信息
+.containerMessage{
+	.person{
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background: url(../images/bg.png) no-repeat top center/cover;
+		.bg{
+			display: block;
+			width: 100%;
+		}
+		.area{
+			width: 100%;
+			min-height: 100%;
+			padding-top: .8rem;
+			.avatar{
+				width: 4.8rem;
+				height: 4.8rem;
+				margin: 0 auto;
+				border-radius: 50%;
+				overflow: hidden;
+				img{
+					display: block;
+					width: 100%;
+				}
+			}
+			.messageBox{
+				margin-top: 2rem;
+				.option{
+					display: flex;
+					margin: 0 auto;
+					margin-bottom: .68rem;
+					width: 12.4rem;
+					height: 2rem;
+					background-color: #ffffff;
+					.icon{
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						width: 2.2rem;
+						img{
+							width: 30px;
+						}
+					}
+					.message{
+						flex: 1;
+						display: flex;
+						.info{
+							flex: 1;
+							padding-left: .4rem;
+							padding-right: .64rem;
+							border: none;
+							background: none;
+							font-size: .56rem;
+							color: #626161;
+						}
+						.code{
+							display: flex;
+							justify-content: center;
+							align-items: center;
+							min-width: 3.2rem;
+							font-size: .36rem;
+							color: #999999;
+						}
+					}
+				}
+			}
+		}
+	}
+}
